--- a/src/test/resources/new_conference_rendered.html
+++ b/src/test/resources/new_conference_rendered.html
@@ -1,15 +1,14 @@
-<!DOCTYPE HTML>
-
+<!doctype html>
 <html>
 <head>
     <title>Getting Started: Handling Form Submission</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
 <h1>Form</h1>
 <form action="/conference" method="post">
-    <p>Participants: <input type="text" id="participantsEmails" name="participantsEmails" value="" /></p>
-    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+    <p>Participants: <input type="text" id="participantsEmails" name="participantsEmails" value=""></p>
+    <p><input type="submit" value="Submit"> <input type="reset" value="Reset"></p>
 </form>
 </body>
 </html>
